# 2026website

./: .gitignore  CLAUDE.md  README.md  netlify.toml  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
api/: .dockerignore  .env.example  Dockerfile  fly.toml  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: ccb240a63241_add_contacts_table.py
api/app/: main.py
api/app/core/: config.py
api/app/db/: engine.py
api/app/db/models/: __init__.py  contact.py
api/app/prompts/: mason_knowledge.md
api/app/routers/: ai_chat.py  contact.py  cover_letter.py  health.py
api/app/schemas/: ai.py  contact.py
api/app/services/: anthropic_client.py  turnstile.py
api/scripts/: cache_diag.py
api/tests/: test_ai_endpoints.py  test_contact.py  test_health.py  test_turnstile.py
docs/: ACHIEVEMENTS.md  BUILD.md  STACK.md
prototypes/: 01-macos.html  02-ide.html  index.html
scripts/: build_resume_pdf.py
web/: package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
web/app/(os)/: layout.tsx  page.tsx
web/app/feed.xml/: route.ts
web/components/achievements/: AchievementsPanel.tsx  AppHooks.tsx  StatusBarProgress.tsx  ToastQueue.tsx
web/components/blog/: Achievement.tsx  Aside.tsx  PostHeader.tsx  Reader.tsx  mdx-components.tsx
web/components/contact/: ContactDialog.tsx  ContactForm.tsx
web/components/design-system/: Buttons.tsx  Chips.tsx  ColorPalette.tsx  Motion.tsx  Section.tsx  Typography.tsx
web/lib/: api.ts  blog.ts  konami.ts  profile.ts  projects.ts  sse.ts  theme.ts  work.ts
(+48 files in other folders)
